# OBodyweight

./: .gitattributes  .gitignore  CHANGELOG.txt  LICENSE  NEXUS_DESCRIPTION.txt  README.md
SKSE/Plugins/: CBPCBounceinterpolationconfig_OBW.txt  CBPCCollisioninterpolationconfig_OBW.txt  CBPConfig_zzOBW_BodyFirm.txt  CBPConfig_zzOBW_BreastFirm.txt  OBodyNGWeight.ini
Scripts/: OBW_MCM.pex  OBW_Native.pex  OBW_Quest.pex
Scripts/Source/User/: OBW_MCM.psc  OBW_Native.psc  OBW_Quest.psc
docs/: BHUNP_COMPAT.md  BODY_SLIDER_MAP.md  NEXUS_DESCRIPTION_v1.5.0.txt  NEXUS_FAQ.md
fomod/: ModuleConfig.xml  info.xml
plugin/: CMakeLists.txt
plugin/src/: Config.cpp  Config.hpp  Debug.hpp  MorphInterface.hpp  PapyrusBindings.cpp  PresetManager.cpp  PresetManager.hpp  SKEE.h  WeightManager.cpp  WeightManager.hpp  main.cpp
stubs/: CBPCPluginScript.psc  SKI_ConfigBase.psc  StorageUtil.psc
